<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FF9800"
        android:textSize="@dimen/size_text_toolbar_30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="140dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_margin_buttons_edges_20dp"
                android:layout_marginEnd="@dimen/size_margin_buttons_edges_20dp"
                android:enabled="true"
                android:text="@string/caption_first_button" />

            <Button
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_margin_buttons_edges_20dp"
                android:layout_marginEnd="@dimen/size_margin_buttons_edges_20dp"
                android:enabled="false"
                android:text="@string/caption_second_button" />

            <Button
                android:id="@+id/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_margin_buttons_edges_20dp"
                android:layout_marginEnd="@dimen/size_margin_buttons_edges_20dp"
                android:enabled="false"
                android:text="@string/caption_third_button" />

            <Button
                android:id="@+id/cats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_margin_buttons_edges_20dp"
                android:layout_marginEnd="@dimen/size_margin_buttons_edges_20dp"
                android:enabled="false"
                android:text="@string/caption_fourth_button" />

            <Button
                android:id="@+id/tables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_margin_buttons_edges_20dp"
                android:layout_marginEnd="@dimen/size_margin_buttons_edges_20dp"
                android:enabled="false"
                android:text="@string/caption_fifth_button" />

            <Button
                android:id="@+id/animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_margin_buttons_edges_20dp"
                android:layout_marginEnd="@dimen/size_margin_buttons_edges_20dp"
                android:enabled="false"
                android:text="@string/caption_sixth_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>